[project]
name = "learn-fastapi"
version = "0.1.0"
description = ""
authors = [
    {name = "Moiz Ali",email = "moizaliafzaal@gmail.com"}
]
readme = "README.md"
requires-python = "3.12.6"
dependencies = [
    "python-dotenv (>=1.0.1,<2.0.0)",
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "pymongo (>=4.12.0,<5.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
